<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_calc"
            android:title='@string/menu_calc'/>
        <item
            android:id="@+id/nav_browser"
            android:title="@string/menu_browser"/>
        <item
            android:id="@+id/nav_audio"
            android:title="@string/menu_audio"/>
        <item
            android:id="@+id/nav_camera"
            android:title="@string/menu_camera"/>
        <item
            android:id="@+id/nav_accelerometer"
            android:title="@string/menu_accelerometer"/>
        <item
            android:id="@+id/nav_audio_record"
            android:title="@string/menu_audio_record"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
