<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.leskov.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.leskov.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.leskov.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="ru.mirea.leskov.mireaproject.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="ru.mirea.leskov.mireaproject.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="ru.mirea.leskov.mireaproject.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_calc"
        android:name="ru.mirea.leskov.mireaproject.CalcFragment"
        android:label="@string/menu_calc"
        tools:layout="@layout/fragment_calc" />
    <fragment
        android:id="@+id/nav_browser"
        android:name="ru.mirea.leskov.mireaproject.BrowserFragment"
        android:label="@string/menu_browser"
        tools:layout="@layout/fragment_browser" />
    <fragment
        android:id="@+id/nav_audio"
        android:name="ru.mirea.leskov.mireaproject.AudioFragment"
        android:label="@string/menu_audio"
        tools:layout="=@layout/fragment_audio" />
    <fragment
        android:id="@+id/nav_camera"
        android:name="ru.mirea.leskov.mireaproject.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/nav_accelerometer"
        android:name="ru.mirea.leskov.mireaproject.AccelerometerFragment"
        android:label="@string/menu_accelerometer"
        tools:layout="@layout/fragment_accelerometer" />
    <fragment
        android:id="@+id/nav_audio_record"
        android:name="ru.mirea.leskov.mireaproject.AudioRecordFragment"
        android:label="@string/menu_audio_record"
        tools:layout="@layout/fragment_audio_record" />
</navigation>